snapshots/yumy__diagnostic__body__test__build_multiline.snap
---
source: src/diagnostic/body.rs
expression: builder.build()
---
BodyDescriptor {
    chunks: [
        BodyChunk {
            line: SourceLine {
                index: 12,
                indent_size: 8,
                full_span: SourceSpan {
                    start: 226,
                    end: 270,
                },
                dedented_span: SourceSpan {
                    start: 234,
                    end: 270,
                },
                text: "let handle = thread::spawn(move || {",
            },
            singleline_labels: [
                Label {
                    message: "required by a bound introduced by this call",
                    span: SourceSpan {
                        start: 247,
                        end: 260,
                    },
                    indicator_style: None,
                },
            ],
            starting_multiline_labels: [
                Label {
                    message: "`Rc<Mutex<i32>>` cannot be sent between threads safely",
                    span: SourceSpan {
                        start: 261,
                        end: 357,
                    },
                    indicator_style: None,
                },
            ],
            finishing_multiline_labels: [],
        },
        BodyChunk {
            line: SourceLine {
                index: 13,
                indent_size: 12,
                full_span: SourceSpan {
                    start: 271,
                    end: 321,
                },
                dedented_span: SourceSpan {
                    start: 283,
                    end: 321,
                },
                text: "let mut num = counter.lock().unwrap();",
            },
            singleline_labels: [],
            starting_multiline_labels: [],
            finishing_multiline_labels: [],
        },
        BodyChunk {
            line: SourceLine {
                index: 14,
                indent_size: 0,
                full_span: SourceSpan {
                    start: 322,
                    end: 322,
                },
                dedented_span: SourceSpan {
                    start: 322,
                    end: 322,
                },
                text: "",
            },
            singleline_labels: [],
            starting_multiline_labels: [],
            finishing_multiline_labels: [],
        },
        BodyChunk {
            line: SourceLine {
                index: 15,
                indent_size: 12,
                full_span: SourceSpan {
                    start: 323,
                    end: 345,
                },
                dedented_span: SourceSpan {
                    start: 335,
                    end: 345,
                },
                text: "*num += 1;",
            },
            singleline_labels: [],
            starting_multiline_labels: [],
            finishing_multiline_labels: [],
        },
        BodyChunk {
            line: SourceLine {
                index: 16,
                indent_size: 8,
                full_span: SourceSpan {
                    start: 346,
                    end: 357,
                },
                dedented_span: SourceSpan {
                    start: 354,
                    end: 357,
                },
                text: "});",
            },
            singleline_labels: [],
            starting_multiline_labels: [],
            finishing_multiline_labels: [
                0,
            ],
        },
    ],
    indent_trim: 8,
}
