snapshots/yumy__diagnostic__body__test__build_singleline.snap
---
source: src/diagnostic/body.rs
expression: builder.build()
---
BodyDescriptor {
    events: [
        EmitLine(
            SourceLine {
                index: 3,
                indent_size: 0,
                full_span: SourceSpan {
                    start: 53,
                    end: 68,
                },
                dedented_span: SourceSpan {
                    start: 53,
                    end: 68,
                },
                text: "pub enum List {",
            },
        ),
        EmitSinglelineLabel(
            Label {
                message: "",
                span: SourceSpan {
                    start: 53,
                    end: 66,
                },
                indicator_style: None,
            },
        ),
        EmitLine(
            SourceLine {
                index: 4,
                indent_size: 4,
                full_span: SourceSpan {
                    start: 69,
                    end: 89,
                },
                dedented_span: SourceSpan {
                    start: 73,
                    end: 89,
                },
                text: "Cons(i32, List),",
            },
        ),
        EmitSinglelineLabel(
            Label {
                message: "recursive without indirection",
                span: SourceSpan {
                    start: 83,
                    end: 87,
                },
                indicator_style: None,
            },
        ),
    ],
    indent_trim: 0,
}
